# split_ext_rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  release.toml
src/: internal_macros.rs  into_split.rs  lib.rs  re.rs  split_end.rs  utf8.rs
