[package]
name = "split_ext"
version = "0.1.1"
authors = ["Jesse A. Tov <jesse.@cs.northwestern.edu>"]
description = "Extension traits for splitting"
repository = "https://github.com/tov/split_ext_rs"
license-file = "LICENSE.md"
edition = "2018"

[features]
default = ["regex"]

[dependencies]
regex = { version = "1.1", optional = true }
rental = "0.5.3"
stable_deref_trait = "1.1"

[dev-dependencies]
lazy_static = "1.3"

