[package]
name = "split_ext"
version = "0.1.2-alpha.0"
authors = ["Jesse A. Tov <jesse.@cs.northwestern.edu>"]
description = "Extension traits for splitting"
repository = "https://github.com/tov/split_ext_rs"
license-file = "LICENSE.md"
edition = "2018"

[features]
default = ["regex", "into"]

# Methods for embedding an owned string in an iterator over
# chunks of it.
into = ["rental", "stable_deref_trait"]

[dependencies]
# Support splitting using regular expressions:
regex = { version = "1.1", optional = true }

# Included in "into" feature:
rental = { version = "0.5.3", optional = true }
stable_deref_trait = { version = "1.1", optional = true }

[dev-dependencies]
lazy_static = "1.3"

